// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> displays header 1`] = `
.c2 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: Inconsolata,ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,Courier New,monospace;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}

.c1 {
  font-weight: 700;
  font-family: Inconsolata,ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,Courier New,monospace;
  font-size: 3.75rem;
  line-height: 1;
  margin-bottom: 0px;
  --tw-text-opacity: 1;
  color: rgba(77,54,140,var(--tw-text-opacity));
}

.c0 {
  padding-top: 0px;
  padding-bottom: 1rem;
  margin-bottom: 1rem;
  text-align: center;
  border-bottom-width: 1px;
  --tw-border-opacity: 1;
  border-color: rgba(0,0,0,var(--tw-border-opacity));
}

<div
  class="c0"
  data-testid="header"
>
  <h1
    class="c1"
    data-testid="headerTitle"
  >
    kayak
  </h1>
  <h2
    class="c2"
    data-testid="headerSubtitle"
  >
    CEO of supermarket cookie quality debates
  </h2>
</div>
`;

exports[`<Header /> renders OK 1`] = `
.c2 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: Inconsolata,ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,Courier New,monospace;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}

.c1 {
  font-weight: 700;
  font-family: Inconsolata,ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,Courier New,monospace;
  font-size: 3.75rem;
  line-height: 1;
  margin-bottom: 0px;
  --tw-text-opacity: 1;
  color: rgba(77,54,140,var(--tw-text-opacity));
}

.c0 {
  padding-top: 0px;
  padding-bottom: 1rem;
  margin-bottom: 1rem;
  text-align: center;
  border-bottom-width: 1px;
  --tw-border-opacity: 1;
  border-color: rgba(0,0,0,var(--tw-border-opacity));
}

<div
  class="c0"
  data-testid="header"
>
  <h1
    class="c1"
    data-testid="headerTitle"
  >
    John Doe
  </h1>
  <h2
    class="c2"
    data-testid="headerSubtitle"
  >
    Programmer
  </h2>
</div>
`;
